# noctra

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  README.md  REPOSITORY_ANALYSIS.md  STATUS.md  TESTING_REPORT.md  deny.toml  duckdb.env  quick_test.sh
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  commands.rs  config.rs  interactive_form.rs  lib.rs  main.rs  output.rs  repl.rs
crates/cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/examples/: create_demo_db.rs
crates/core/src/: csv_backend.rs  datasource.rs  error.rs  executor.rs  lib.rs  session.rs  types.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/formlib/: Cargo.toml
crates/formlib/examples/: demo_formlib.rs
crates/formlib/src/: forms.rs  graph.rs  lib.rs  loader.rs  validation.rs
crates/noctra-duckdb/: Cargo.toml  README.md  build.rs
crates/noctra-duckdb/examples/: hybrid_demo.rs
crates/noctra-duckdb/src/: attachment.rs  config.rs  engine.rs  error.rs  extensions.rs  lib.rs  parser.rs  query_engine.rs  source.rs
crates/noctra-duckdb/tests/: integration_hybrid.rs
crates/parser/: Cargo.toml
crates/parser/examples/: demo_parser.rs
crates/parser/src/: error.rs  lib.rs  parser.rs  rql_ast.rs  template.rs  tests.rs
crates/srv/: Cargo.toml
crates/srv/docs/: API.md
crates/srv/examples/: development.toml  production.toml
crates/srv/src/: handlers.rs  lib.rs  main.rs  performance.rs  routes.rs  server.rs  types.rs  websocket.rs
crates/srv/src/tests/: integration.rs
crates/tui/: Cargo.toml
crates/tui/src/: components.rs  form_renderer.rs  layout.rs  lib.rs  noctra_tui.rs  nwm.rs  renderer.rs  widgets.rs
docs/: API-REFERENCE.md  CONTRIBUTING.md  DESIGN.md  DUCKDB_SETUP.md  EXAMPLES.md  FDL2-SPEC.md  FORMS.md  GETTING_STARTED.md  M6_BLUEPRINT_ANALYSIS.md  M6_CONTINUATION_ANALYSIS.md  M6_IMPLEMENTATION_PLAN.md  M6_IMPLEMENTATION_PLAN_v2.md  M6_PHASE1_STATUS.md  M6_PHASE2_PLAN.md  M6_PHASE2_STATUS.md  M7_IMPLEMENTATION_PLAN.md  NQL-SPEC.md  PROJECT_STATUS.md  QUICKSTART.md  ROADMAP.md  RQL-EXTENSIONS.md
docs/archive/: M3_IMPLEMENTATION_PLAN.md  STATUS_OLD.md  TESTING_REPORT.md
examples/: app.toml  clientes.csv  empleados.toml
examples/forms/: employee_add.toml  employee_search.toml
examples/scripts/: example.rql
forms/: empleados.toml
