[package]
name = "noctra-core"
version = "0.1.0"
edition = "2021"
description = "Core runtime and executor for Noctra"
license = "MIT OR Apache-2.0"
authors = ["Claude Code <claude@anthropic.com>"]
# Local project - repository = "local"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Database backends - Solo sqlite por ahora (opcional)
sqlparser = { workspace = true }
rusqlite = { workspace = true, optional = true }

# Utility crates
uuid = { workspace = true }
regex = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
postgres = []

[lib]
name = "noctra_core"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true