[package]
name = "noctra-duckdb"
version = "0.6.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1", default-features = false }
noctra-core = { path = "../core" }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.10"