[package]
name = "noctra-parser"
version = "0.1.0"
edition = "2021"
description = "RQL parser with sqlparser extensions for Noctra"
license = "MIT OR Apache-2.0"
authors = ["Claude Code <claude@anthropic.com>"]
# Local project - repository = "local"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }

# SQL parser base
sqlparser = "0.40"

# Text processing
regex = "1.0"
aho-corasick = "1.0"

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lib]
name = "noctra_parser"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true