[package]
name = "noctra-tui"
version = "0.1.0"
edition = "2021"
description = "TUI components and Noctra Window Manager for Noctra"
license = "MIT OR Apache-2.0"
authors = ["Claude Code <claude@anthropic.com>"]
# Local project - repository = "local"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["macros"] }
crossterm = { version = "0.28" }
tui-textarea = "0.7"

# Core dependencies
noctra-core = { path = "../core" }
noctra-parser = { path = "../parser" }
noctra-formlib = { path = "../formlib" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Text processing
unicode-width = "0.1"
regex = "1.0"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lib]
name = "noctra_tui"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true